# hello-world

./: CMakeLists.txt  README.md
executables/: CMakeLists.txt  sayHello.cpp
src/: CMakeLists.txt  HelloWorldObject.cxx  LinkDef.h
src/include/: HelloWorldObject.h
